--- a/container/package.json
+++ b/container/package.json
@@ -3,10 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "watch": "npm-run-all --parallel dev tsc:watch",
-    "tsc:watch": "tsc -w",
     "build": "tsc && vite build",
+    "dev": "vite",
+    "dev:watch": "npm-run-all --parallel dev tsc:watch",
+    "tsc:watch": "tsc -w",
+    "watch": "npm-run-all --parallel preview build:watch tsc:watch",
+    "build:watch": "vite build --watch",
     "preview": "vite preview"
   },
   "dependencies": {
